<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/Home_fragment"
        android:icon="@drawable/baseline_home"
        android:title="@string/home"
        />

    <item
        android:id="@+id/video_fragment"
        android:icon="@drawable/baseline_videocam"
        android:title="@string/video_playing" />
    <item
        android:id="@+id/Search_fragment"
        android:icon="@drawable/search_new"
        android:title="@string/search"
        />
    <item
        android:id="@+id/message_fragment"
        android:icon="@drawable/ic_message"
        android:title="@string/profile"
        />
    <item
        android:id="@+id/Profile_fragment"
        android:icon="@drawable/profile"
        android:title="@string/profile"
        />
</menu>