<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/gener"
        android:textColor="@color/colorWhite"
        android:textSize="13sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvGenre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="#95FFFFFF"
        android:textSize="13sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="#66C4C4C4" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/directors"
        android:textColor="@color/colorWhite"
        android:textSize="13sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvDirectors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#95FFFFFF"
        android:textSize="13sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="#66C4C4C4" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/cast"
        android:textColor="@color/colorWhite"
        android:textSize="13sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvCast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#95FFFFFF"
        android:textSize="13sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="#66C4C4C4" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/language"
        android:textColor="@color/colorWhite"
        android:textSize="13sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#95FFFFFF"
        android:textSize="13sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="#66C4C4C4" />

</LinearLayout>