<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/colorNavyBlue">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="130dp"
            android:layout_height="41dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_marginStart="20dp"
            android:text="@string/select_language"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/rlRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvWelcome"
            android:layout_margin="15dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <RelativeLayout
                android:id="@+id/rlEnglish"
                android:layout_width="0dp"
                android:layout_height="110dp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/new_button_bg"
                android:padding="15dp"
                android:layout_weight="0.5">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/english"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/radioEnglish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    app:buttonTint="@color/black"
                    android:enabled="false"/>

                <ImageView
                    android:layout_width="83dp"
                    android:layout_height="66dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:src="@drawable/english" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlHindi"
                android:layout_width="0dp"
                android:layout_height="110dp"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/bg_language_unselected"
                android:padding="15dp"
                android:layout_weight="0.5">

                <TextView
                    android:id="@+id/tvHindi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hindi"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvHindi"
                    android:layout_marginTop="10dp"
                    android:text="@string/hindi_hindi"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/radioHindi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    app:buttonTint="@color/black"
                    android:enabled="false"/>

                <ImageView
                    android:layout_width="78dp"
                    android:layout_height="57dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:src="@drawable/hindi" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rlRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlRow1"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:weightSum="1">

            <RelativeLayout
                android:id="@+id/rlMarathi"
                android:layout_width="0dp"
                android:layout_height="110dp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/bg_language_unselected"
                android:padding="15dp"
                android:layout_weight="0.5">

                <TextView
                    android:id="@+id/tvMarathi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/marathi"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvMarathi"
                    android:layout_marginTop="10dp"
                    android:text="@string/marathi_marathi"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/radioMarathi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    app:buttonTint="@color/black"
                    android:enabled="false"/>

                <ImageView
                    android:layout_width="78dp"
                    android:layout_height="57dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:src="@drawable/marathi" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlPunjabi"
                android:layout_width="0dp"
                android:layout_height="110dp"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/bg_language_unselected"
                android:padding="15dp"
                android:layout_weight="0.5">

                <TextView
                    android:id="@+id/tvPunjabi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/punjabi"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvPunjabi"
                    android:layout_marginTop="10dp"
                    android:text="@string/punjabi_punjabi"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/radioPunjabi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    app:buttonTint="@color/black"
                    android:enabled="false"/>

                <ImageView
                    android:layout_width="78dp"
                    android:layout_height="57dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:src="@drawable/punjabi" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rlRow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlRow2"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:weightSum="1"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/rlTamil"
                android:layout_width="0dp"
                android:layout_height="110dp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/bg_language_unselected"
                android:padding="15dp"
                android:layout_weight="0.5">

                <TextView
                    android:id="@+id/tvTamil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tamil"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvTamil"
                    android:layout_marginTop="10dp"
                    android:text="@string/tamil_tamil"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/radioTamil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    app:buttonTint="@color/black"
                    android:enabled="false" />

                <ImageView
                    android:layout_width="78dp"
                    android:layout_height="57dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:src="@drawable/tamil" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlTelugu"
                android:layout_width="0dp"
                android:layout_height="110dp"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/bg_language_unselected"
                android:padding="15dp"
                android:layout_weight="0.5">

                <TextView
                    android:id="@+id/tvTelugu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/telugu"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvTelugu"
                    android:layout_marginTop="10dp"
                    android:text="@string/telugu_telugu"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/radioTelugu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    app:buttonTint="@color/black"
                    android:enabled="false"/>

                <ImageView
                    android:layout_width="78dp"
                    android:layout_height="57dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:src="@drawable/telugu" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rlRow4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlRow3"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:weightSum="1"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/rlKannada"
                android:layout_width="0dp"
                android:layout_height="110dp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/bg_language_unselected"
                android:padding="15dp"
                android:layout_weight="0.5">

                <TextView
                    android:id="@+id/tvKannada"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kannada"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvKannada"
                    android:layout_marginTop="10dp"
                    android:text="@string/kannada_kannada"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/radioKannada"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    app:buttonTint="@color/black"
                    android:enabled="false"/>

                <ImageView
                    android:layout_width="78dp"
                    android:layout_height="57dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:src="@drawable/kannada" />
            </RelativeLayout>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/new_button_bg"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/rlRow4"
            android:text="@string/continue_lan"
            android:textColor="@color/black"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textStyle="bold"
            android:textSize="15sp"/>


        <FrameLayout
            android:id="@+id/native_ad_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvContinue"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_8sdp"/>

    </RelativeLayout>
</ScrollView>